Modified to support chained properties